# skipperman

./: CHANGELOG.md  CONTRIBUTING.md  README.md  WA_file1  flask_app.py  pyproject.toml  requirements.txt  roles_and_skills.yaml  setup.py  tox.ini
docs/: List_and_explanation_of_skipperman_fields.md  WA_clone_mapping_help.md  WA_create_your_own_mapping_help.md  WA_field_mapping_help.md  WA_template_mapping_help.md  WildApricothelp.md  add_cadet_help.md  add_event_help.md  add_new_volunteer_help.md  cadet_committee_help.md  clothing_help.md  configuration_help.md  copy_menu_patrol_boat_help.md  copy_menu_rota_help.md  data_backup_help.md  data_dumps_report.md  delete_attendance_help.md  edit_qualification_tick_help.md  event_cleaning_help.md  file_management_help.md  food_help.md  general_report_config_and_printing_help.md  group_allocation_help.md  group_allocation_report_help.md  guide.md  help_adding_partner.md  help_notes.md  ideas.md  identify_cadets_at_event_help.md  identify_volunteers_at_event_help.md  import_membership_list_help.md  import_registration_data_help.md  installation.md  link_required.md  list_of_users_help.md  main-menu.md  manually_adding_a_sailor.md  mark_attendance_help.md  patrol_boat_help.md  patrol_boats_rota_report_help.md  (+26 more)
launcher/: cli_csv_launcher.py  web_csv_launcher.py
logic/: api.py  data_and_interface.py
objects/: cadets.py  constants.py  events.py  field_list.py  generic.py  groups.py  mapped_wa_event.py  mapped_wa_event_no_ids.py  mapped_wa_event_with_id_and_status.py  mapped_wa_event_with_ids.py  utils.py  wa_event_mapping.py  (+1 more)
(+1292 files in other folders)
